Projet total/Assembleur/tests/bad/testfile-bad-lw.ms
    .section text
lw %rax %rbx